# process_launcher

./: CMakeLists.txt  README.md  config.cpp  config.h  parsed_config.txt  parser  parser.cpp
inc/: config.h  main.h
lib/: config.yaml
lib/yaml-cpp/test/: CMakeLists.txt
lib/yaml-cpp/test/gtest-1.10.0/: CMakeLists.txt
lib/yaml-cpp/test/gtest-1.10.0/googlemock/: CMakeLists.txt
lib/yaml-cpp/test/gtest-1.10.0/googlemock/include/gmock/: gmock-matchers.h
lib/yaml-cpp/test/gtest-1.10.0/googletest/: CMakeLists.txt
lib/yaml-cpp/test/gtest-1.10.0/googletest/cmake/: internal_utils.cmake
src/: config.cpp  main.cpp  parser  parser.cpp
